gccida/g2/ssa_eliminate_dead_code
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:956:1: error: use of undeclared identifier '$7E965715368205AFDBD59B4566E36A4D'
$7E965715368205AFDBD59B4566E36A4D *v3; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:956:36: error: use of undeclared identifier 'v3'
$7E965715368205AFDBD59B4566E36A4D *v3; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1047:72: error: use of undeclared identifier 'va'
unprocessed_instructions = varray_init( 0x40uLL, 8uLL, ( const char *)&va.elements_used + 2); 
                                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1050:1: error: use of undeclared identifier 'v3'
v3 = ( $7E965715368205AFDBD59B4566E36A4D *)xmalloc( 0x10uLL); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1050:43: error: expected expression
v3 = ( $7E965715368205AFDBD59B4566E36A4D *)xmalloc( 0x10uLL); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1050:8: error: use of undeclared identifier '$7E965715368205AFDBD59B4566E36A4D'
v3 = ( $7E965715368205AFDBD59B4566E36A4D *)xmalloc( 0x10uLL); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1052:1: error: use of undeclared identifier 'v3'
v3->length = v2; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1053:11: error: use of undeclared identifier 'v3'
p_data = &v3->data; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1054:9: error: use of undeclared identifier 'v3'
cdbte = v3; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1092:19: error: expected identifier or '('
 struct edge_list = create_edge_list( ); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1103:30: error: use of undeclared identifier 'va'
fancy_abort( ( const char *)&va, 247, "find_control_dependence"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1114:30: error: use of undeclared identifier 'va'
fancy_abort( ( const char *)&va, 185, "set_control_dependent_block_to_edge_map_bit"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1134:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v69 = (  struct rtx_def *)k[2]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1151:30: error: use of undeclared identifier 'va'
fancy_abort( ( const char *)&va, 399, "find_inherently_necessary"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1259:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v35 = ( __int64)current_instruction[0][2]; 
                ^~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1387:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v64 = ( __int64)ii[2]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1418:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v68 = ( __int64)jj[2]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1442:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v62 = ( __int64)insns[2]; 
                ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1490:30: error: use of undeclared identifier 'va'
fancy_abort( ( const char *)&va, 737, "ssa_eliminate_dead_code"); 
                             ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_eliminate_dead_code/src/obj/ssa-dce.o] Error 1
